--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocos-backend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "luxon": "^3.5.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "ramda": "^0.30.1",
