--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "luxon": "^3.5.0",
+    "nyc": "^15.1.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "ramda": "^0.30.1",
